# apiH

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  db.py  main.py  models.py  schemas.py
app/routers/: health.py  runs.py  workflows.py
app/services/: compiler.py  contract_store.py  h_client.py  route_discovery.py  router.py  schema_infer.py  validate.py
app/services/http_executors/: __init__.py  base.py  generated.py  graphql_countries.py  hn_firebase.py  openlibrary.py  wttr.py
data/: eval_report.md  eval_results.jsonl
docs/: EVAL-SPEC.md  INTERFACES.md  LIVE-DEMO.md  SPEC.md
motion/: README.md  package-lock.json  package.json
motion/src/: root.tsx  video.tsx
scripts/: demo_curl.sh  hard_eval.py  seed.py
site/: index.html
static/: index.html
tests/: conftest.py  test_concurrency.py  test_discovery.py  test_generated_route.py  test_hn_http.py  test_new_mappers.py  test_route_discovery.py  test_router.py  test_validate.py
